# Programacao1_A

./: CMakeLists.txt  main.c  utilizadores.txt
Agendamentos/: agendamentos.c  agendamentos.h
Login/: Login.c  Login.h
Propriedades/: propriedades.c  propriedades.h
Utilizador/: utilizador.c  utilizador.h
